[package]
name = "tabell"
version = "0.1.0"
edition = "2021"
authors = ["Akinobu Nagae <nagae.keu@gamil.com>"]
description = "Make Variable Name CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.9", features = ["derive"] }
mecab = "*"
rusqlite = "*"


