[package]
name = "tabell"
version = "0.1.0"
edition = "2021"
authors = ["Akinobu Nagae <nagae.keu@gamil.com>"]
description = "Make Variable Name CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.9", features = ["derive"] }
mecab = "*"
rusqlite = "*"
google-translate2 = "*"
serde = { version = "1.0.139", features = ["derive"]}
serde_json = "^1.0"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
tokio = { version = "1.19.2", features = ["full"] }


