[package]
authors = ["Akinobu Nagae <nagae.keu@gamil.com>"]
description = "Make Variable Name CLI"
edition = "2021"
name = "tabell"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0-rc.9", features = ["derive"]}
google-translate2 = "*"
mecab = "*"
reqwest = {version = "0.11.11", features = ["json", "blocking"]}
rusqlite = "*"
serde = {version = "1.0.139", features = ["derive"]}
serde_json = "^1.0"
tokio = {version = "1.19.2", features = ["full"]}

[package.metadata.scripts]
coverage = "cargo llvm-cov --html; mkdir -p site/static/coverage; cp -r target/llvm-cov/html/* site/static/coverage/"
hello = "echo \"Hello World\""
server = "hugo -s site server"
site = "hugo -s site"
